--- a/bot/src/main/resources/application.properties
+++ b/bot/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 bot.name=${BOT_NAME}
 bot.token=${BOT_TOKEN}
 bot.baseUrl=http://localhost:8090
+server.port=8070
 springdoc.api-docs.path=/swagger-ui
