--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -92,5 +92,11 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.tinkoff.edu</groupId>
+            <artifactId>link-parser</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
