--- a/scrapper/src/main/resources/application.properties
+++ b/scrapper/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-app.scheduler.interval=5000
+app.scheduler.interval=50000
+app.link-age=5000
 server.port=8090
 springdoc.api-docs.path=/swagger-ui
+
+spring.datasource.driverClassName=org.postgresql.Driver
+--spring.datasource.url=jdbc:postgresql://localhost:5433/scrapper
+spring.datasource.url=jdbc:postgresql://localhost:5432/scrapper
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.liquibase.enabled=false
