--- a/scrapper/pom.xml
+++ b/scrapper/pom.xml
@@ -98,5 +98,9 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+        </dependency>
     </dependencies>
 </project>
