--- a/scrapper/src/main/resources/application.properties
+++ b/scrapper/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 app.scheduler.interval=50000
 app.link-age=5000
+app.database-access-type=jpa
 server.port=8090
 springdoc.api-docs.path=/swagger-ui
 
