--- a/bot/src/main/resources/application.properties
+++ b/bot/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 bot.name=${BOT_NAME}
 bot.token=${BOT_TOKEN}
+bot.rabbit.exchange=scrapper.exchange
+bot.rabbit.queue=scrapper.queue
 bot.baseUrl=http://localhost:8090
 server.port=8070
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+
 springdoc.api-docs.path=/swagger-ui
+
+--spring.rabbitmq.username=guest
+--spring.rabbitmq.password=guest
