--- a/scrapper/docker-compose.yml
+++ b/scrapper/docker-compose.yml
@@ -34,6 +34,14 @@ services:
     networks:
       - backend
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./rabbitmq_data:/var/lib/rabbitmq
+
 networks:
   backend:
 
