--- a/bot/src/main/resources/application.properties
+++ b/bot/src/main/resources/application.properties
@@ -3,3 +3,11 @@ bot.token=${BOT_TOKEN}
 bot.baseUrl=http://localhost:8090
 server.port=8070
 springdoc.api-docs.path=/swagger-ui
+management.info.env.enabled=true
+management.server.port=8001
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.prometheus=metrics
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.enabled-by-default=true
+management.endpoint.health.show-details=always
+management.metrics.tags.application=${spring.application.name}
