--- a/scrapper/src/main/resources/application.properties
+++ b/scrapper/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.liquibase.enabled=false
+
+management.info.env.enabled=true
+management.server.port=8081
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.prometheus=metrics
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.enabled-by-default=true
+management.endpoint.health.show-details=always
+management.metrics.tags.application=${spring.application.name}
