--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -41,3 +41,17 @@ jobs:
 
       - name: Push image
         run: docker push $REGISTRY/$USERNAME/bot:latest
+
+  checkstyle:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+
+      - name: Run Checkstyle
+        run: mvn -pl bot -am checkstyle:check
