--- a/.github/workflows/scrapper.yml
+++ b/.github/workflows/scrapper.yml
@@ -52,6 +52,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
 
       - name: Run Checkstyle
         run: mvn -pl scrapper -am checkstyle:check
