--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
                         </additionalClasspathElements>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>3.2.1</version>
+                    <configuration>
+                        <configLocation>checkstyle.xml</configLocation>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <failOnViolation>true</failOnViolation>
+                        <includeTestSourceDirectory>false</includeTestSourceDirectory>
+                        <violationSeverity>warning</violationSeverity>
+                        <excludes>**/model/jooq/**</excludes>
+                    </configuration>
+                </plugin>
             </plugins>
 
         </pluginManagement>
